<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lv.id.tomsteteris.businesscard.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="32sp"
                android:textAlignment="center"
                android:text="@string/welcome"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="24sp"
                android:textAlignment="center"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/latvia_map_flag_name"
                android:scaleType="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/population"
                    style="@style/ListItems"
                    android:textAlignment="textEnd"
                    android:gravity="end"/>

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#fff"/>

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:text="@string/population_amount"
                    style="@style/ListDescription"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/area"
                    style="@style/ListItems"
                    android:textAlignment="textEnd"
                    android:gravity="end"/>

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#fff"/>

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/area_size"
                    android:text="@string/area_size"
                    style="@style/ListDescription"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/capital"
                    style="@style/ListItems"
                    android:textAlignment="textEnd"
                    android:gravity="end"/>

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#fff"/>

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:text="@string/capital_name"
                    style="@style/ListDescription"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/language"
                    style="@style/ListItems"
                    android:textAlignment="textEnd"
                    android:gravity="end"/>

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#fff"/>

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:text="@string/language_value"
                    style="@style/ListDescription"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/currency"
                    style="@style/ListItems"
                    android:textAlignment="textEnd"
                    android:gravity="end"/>

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#fff"/>

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:text="@string/currency_value"
                    style="@style/ListDescription"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_marginTop="24dp"
            android:textColor="#fff"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_more"/>
    </LinearLayout>
</ScrollView>
